# Arcade

./: .gitignore  ARCADE.md  ArcadeGuide.md  CMakeLists.txt  Makefile  README.md  arcade-documentation.md  doxide.yaml  mkdocs.yaml
.github/workflows/: arcade.yml
assets/nibbler/: levels.txt
bonus/: index.md
bonus/arcade/: CellType.md  Core.md  Direction.md  DynamicLibraryObject.md  GameMode.md  GameState.md  IFont.md  IFontManager.md  ISound.md  ISoundManager.md  ITextureManager.md  LibType.md  MenuSection.md  Mouse.md  NcursesDisplayModule.md  NcursesFontManager.md  NcursesSound.md  NibblerGame.md  ResolutionScaler.md  SDLFont.md  SDLFontManager.md  SDLRendererManager.md  SDLSound.md  SDLTexture.md  SFMLDisplay.md  SFMLLibrary.md  SFMLSound.md  SFMLSoundManager.md  Score.md  SdlLibrary.md  SnakeGame.md  SoundInfos.md  TextureBase.md  TextureImg.md  TextureText.md  WindowProperties.md  index.md
bonus/arcade/BaseSnakeGame/: GameState.md
bonus/arcade/MyTexture/: index.md
doc/: ARCADE.md  Core.md  Vector.md  index.md
doc/arcade/: BaseSnakeGame.md  CollisionType.md  Color.md  Core.md  DynamicLibraryManager.md  DynamicLibraryObject.md  Font.md  GameState.md  IDisplayLibrary.md  IDisplayModule.md  IFontManager.md  IGameModule.md  ISoundManager.md  ITexture.md  ITextureManager.md  Keyboard.md  LevelManager.md  Mouse.md  MusicInfos.md  Ncurses.md  NcursesDisplayModule.md  NcursesFont.md  NcursesFontManager.md  NcursesLibrary.md  NcursesSound.md  NcursesSoundManager.md  NcursesTexture.md  NcursesTextureManager.md  Rect.md  SDLDisplayModule.md  SDLFont.md  SDLFontManager.md  SDLSound.md  SDLSoundManager.md  SDLTexture.md  SDLTextureManager.md  SFMLDisplay.md  SFMLFont.md  SFMLFontManager.md  SFMLLibrary.md  (+15 more)
doc/arcade/Keyboard/: KeyCode.md
doc/arcade/MySound/: index.md
docs/: index.md
include/: Arcade.hpp  IDisplayLibrary.hpp  IDisplayModule.hpp  IFont.hpp  IGameModule.hpp  ISound.hpp  ITexture.hpp  Input.hpp  Misc.hpp  Vector.hpp  arcade.cpp  arcade.hpp
site/: 404.html  index.html
site/Core/: index.html
site/Vector/: index.html
site/search/: search_index.json
src/: main.cpp
src/Arcade/: Core.cpp  Core.hpp  CoreInit.cpp  CoreInput.cpp  CoreMenu.cpp  CoreRun.cpp  CoreScores.cpp  DLLoader.cpp  DLLoader.hpp  DLManager.cpp  DLManager.hpp  DLObject.cpp  DLObject.hpp  LibraryReader.cpp  LibraryReader.hpp  Makefile  ResolutionScaler.cpp  ResolutionScaler.hpp  main.cpp
src/Games/Common/BaseSnakeGame/: BaseSnakeGame.cpp  BaseSnakeGame.hpp
src/Games/Nibbler/: LevelManager.cpp  LevelManager.hpp  NibblerExport.cpp  NibblerGame.cpp  NibblerGame.hpp
src/Games/Snake/: SnakeExport.cpp  SnakeGame.cpp  SnakeGame.hpp  TestingStubs.cpp
src/Graphics/Ncurses/: Ncurses.cpp  Ncurses.hpp  NcursesLibrary.cpp  NcursesLibrary.hpp
src/Graphics/Ncurses/src/: NcursesDisplayModule.cpp  NcursesDisplayModule.hpp  NcursesFontManager.cpp  NcursesFontManager.hpp  NcursesSoundManager.cpp  NcursesSoundManager.hpp  NcursesTextureManager.cpp  NcursesTextureManager.hpp
src/Graphics/Sdl/: Sdl.cpp  Sdl.hpp  SdlLibrary.cpp  SdlLibrary.hpp
src/Graphics/Sdl/src/: SdlDisplayModule.cpp  SdlDisplayModule.hpp  SdlFontManager.cpp  SdlFontManager.hpp  SdlRendererManager.cpp  SdlRendererManager.hpp  SdlSoundManager.cpp  SdlSoundManager.hpp  SdlTextureManager.cpp  SdlTextureManager.hpp
src/Graphics/Sfml/: Sfml.cpp  Sfml.hpp  SfmlLibrary.cpp  SfmlLibrary.hpp
src/Graphics/Sfml/src/: SfmlDisplayModule.cpp  SfmlDisplayModule.hpp  SfmlFontManager.cpp  SfmlFontManager.hpp  SfmlSoundManager.cpp  SfmlSoundManager.hpp  SfmlTextureManager.cpp  SfmlTextureManager.hpp
